--- a/map_stats_Comparaison_de_cartes.css
+++ b/map_stats_Comparaison_de_cartes.css
@@ -1,197 +1,86 @@
-/*Texte*/
-
-a /*lien hypertexte*/
-{
-	text-decoration: none;
-	color: black;
-}
-
-strong /*texte mis en valeur*/
-{
-	font-size: 18;
-	font-weight: bold;
-	margin-left: 10;
-}
-
-span /*texte normale*/
-{
-	padding: 3;
-	background-color: white;
-}
-
-
-
-
-/*Haut de page*/
-
-header
-{
-	position: fixed;
-	top: 0;
-	left: 0;
-	height: 175;
-	width: 100%;
-	border: solid black;
-	display: flex;
-    flex-direction: row;
-}
-
-h1 /*titre du site web*/
-{
-	font-size: 80;
-	margin-left: 350;
-	margin-top: 10;
-}
-
-#lausanne_logo /*logo de la ville de Lausanne*/
-{
-	margin-top:15;
-	margin-left:30;
-	height: 150;
-}
-
-
-
-
-/*Pied de page*/
-
-footer
-{
-	position: fixed;
-	top: 780;
-	left: 0;
-	height: 170;
-	width: 100%;
-    border-top: solid black;
-    text-align: center;
-	padding: 10;
-	display: flex;
-    flex-direction: row;
-}
-
-#epfl_logo /*logo de l'EPFL*/
-{
-	height : 150;
-}
-
-#contact /*nom du lien pour contacter l'EPFL*/
-{
-	font-size: 30;
-	margin-left: 50;
-	margin-top: 40;
-}
-
-.lien /*lien renvoyant vers envoi de mail à EPFL*/
-{
-	text-decoration: underline;
-	color: blue;
-}
-
-
-
-
-/*Menu de navigation*/
-
-nav
-{
-	position: fixed;
-	top: 110;
-	left: 380;
-	height: 75;
-	width: 80%;
-    text-align: center;
-}
-
-ul /*crée une liste sans puces*/
-{
-	list-style-type:none;
-}
-
-ul li a /*éléments de la liste*/
-{
-	font-size: 30;
-	display:block;
-	float:right;   
-	width:21%;
-	background-color:red;
-	color:black;
-	text-decoration:none;
-	text-align:center;
-	margin-right: 3%;
-	padding:2;
-	border: 2px solid black;
-}
-
-ul li a:hover /*comportement des éléments au survol de la souris*/
-{
-	color: red;
-	background-color: blue;
-	border-color: black;
-}
-
-
-
-
 /*Choix des cartes à afficher*/
 
-#menu
+#stats_Comparaison_menu
 {
 	position: fixed;
 	top: 205;
-	left: 1%;
-	width: 23%;
+	left: 20;
+	width: 470;
 	height: 546;
 	border: solid black;
 	padding: 0;
 	overflow: auto;
 }
 
-.cartes /*fenêtre de choix de carte*/
+.stats_Comparaison_carte_choix /*fenêtres de choix de carte*/
 {
+	height: 241;
 	margin: 0;
 	padding: 15;
+	padding-left: 20;
+	padding-right: 20;
 	border: 1px solid black;
 	overflow: auto;
 }
 
-h6 /*Sous-titres de la fenêtre*/
+.stats_Comparaison_carte_choix_header /*titre + bouton de validation de la fenêtre*/
+{
+	width: 100%;
+	display: flex;
+    flex-direction: row;
+}
+
+.stats_Comparaison_carte_choix_titre /*titres des fenêtres de choix de carte*/
 {
 	font-size: 30;
 	font-weight: bold;
 	text-decoration: underline;
 	text-align: center;
-	margin-top: 3;
-	margin-bottom: 20;
+	margin-top: 0;
+	margin-bottom: 5;
+	margin-left: 150;
 }
 
-.carte_attribut /*Attributs de la carte à afficher*/
+.stats_Comparaison_carte_button /*bouton de validation de la recherche*/
 {
 	font-size: 20;
 	font-weight: bold;
+	margin-left: 90;
+	height: 35;
+	padding: 5;
 }
 
-.carte_option /*Choix de la ville et de la précision de la carte à afficher*/
-{
-	font-size: 14;
-	margin-bottom: 0;
-}
-
-.carte_stat_option /*Choix de la statistique à afficher*/
-{
-	font-size: 14;
-	margin-top: 10;
-	margin-bottom: 0;
-	margin-top: 10;
-}
-
-.button_carte /*Bouton de validation de la recherche*/
+.stats_Comparaison_carte_attribut /*attributs des cartes*/
 {
 	font-size: 20;
 	font-weight: bold;
-	display: block;
-	margin-left: auto;
-	margin-right: auto;
-	margin-bottom: 8;
+	margin-bottom: 0;
+}
+
+.stats_Comparaison_carte_option /*listes déroulantes des options (ville et nombre de classes) des cartes*/
+{
+	font-size: 14;
+	margin-top: 0;
+	margin-bottom: 0;
+}
+
+.stats_Comparaison_carte_option_stat /*choix de la statistique à afficher*/
+{
+	font-size: 14;
+	margin-top: 5;
+	margin-bottom: 5;
+}
+
+.stats_Comparaison_carte_type /*choix du type de carte (pour la ville de Lausanne)*/
+{
+	margin-left: 20;
+}
+
+.stats_Comparaison_carte_option_classes /*choix du nombre de classes de la carte à afficher*/
+{
+	font-size: 14;
+	margin-top: 0;
+	margin-right: 50;
 }
 
 
@@ -199,50 +88,48 @@ h6 /*Sous-titres de la fenêtre*/
 
 /*Cartes*/
 
-section
+#stats_Comparaison_section
 {
 	position: fixed;
 	top: 205;
-	left: 26%;
+	left: 530;
 	height: 500;
-	width: 80%;
+	width: 1500;
 	display: flex;
     flex-direction: row;
 }
 
-#mapid1 /*carte 1*/
+.stats_Comparaison_mapid /*cartes*/
 {
 	height: 550;
-	width: 50%;
+	width: 48%;
 	border: 1px solid black;
 	z-index: 0;
 }
 
-#mapid2 /*carte 2*/
+#stats_Comparaison_mapid2 /*carte 2*/
 {
-	height: 550;
-	width: 50%;
-	border: 1px solid black;
-	z-index: 0;
 	margin-left: 2%;
 }
 
-#mapchoix1 /*bouton de changement de visualisation de la carte 1*/
+.stats_Comparaison_mapchoix /*boutons de changement de visualisation des cartes*/
 {
-	position: fixed;
-	top: 220;
-	left: 30%;
 	width: 60;
 	z-index: 1;
 }
 
-#mapchoix2 /*bouton de changement de visualisation de la carte 2*/
+#stats_Comparaison_mapchoix1 /*bouton de changement de visualisation de la carte 1*/
 {
 	position: fixed;
 	top: 220;
-	left: 66%;
-	width: 60;
-	z-index: 1;
+	left: 590;
+}
+
+#stats_Comparaison_mapchoix2 /*bouton de changement de visualisation de la carte 2*/
+{
+	position: fixed;
+	top: 220;
+	left: 1265;
 }
 
 
@@ -250,12 +137,9 @@ section
 
 /*Légendes des cartes raster de données statistiques*/
 
-#legende1
+.stats_Comparaison_legende
 {
-	position: fixed;
-	top: 205;
-	left: 53%;
-	width: 7%;
+	width: 150;
 	padding: 10;
 	border: 1px solid black;
 	background-color: white;
@@ -263,20 +147,21 @@ section
 	z-index = 1 ;
 }
 
-#legende2
+#stats_Comparaison_legende1
 {
 	position: fixed;
-	top: 205;
-	left: 89.5%;
-	width: 7%;
-	padding: 10;
-	border: 1px solid black;
-	background-color: white;
-	overflow: auto;
-	z-index = 1 ;
+	top: 215;
+	left: 1000;
 }
 
-h5 /*titre de la légende*/
+#stats_Comparaison_legende2
+{
+	position: fixed;
+	top: 215;
+	left: 1685;
+}
+
+.stats_Comparaison_legende_titre /*titre de la légende*/
 {
 	margin-top: 5;
 	margin-bottom: 10;
@@ -285,7 +170,7 @@ h5 /*titre de la légende*/
 	text-align: center;
 }
 
-.ligne /*ligne comprenant couleur + valeurs associées à cette couleur*/
+.stats_Comparaison_legende_ligne /*ligne comprenant couleur + valeurs associées à cette couleur*/
 {
 	padding:5;
 	display: flex;
@@ -293,7 +178,7 @@ h5 /*titre de la légende*/
 	margin-left: 20%;
 }
 
-.couleur /*carré de couleur*/
+.stats_Comparaison_legende_couleur /*carré de couleur*/
 {
 	width:10%;
 	padding:3;
