--- a/map_stats_Statistiques.css
+++ b/map_stats_Statistiques.css
@@ -1,4 +1,5 @@
-/*Choix des statistiques à afficher*/
+/*Choix de la statistiques à étudier*/
+
 
 #stats_Statistiques_menu
 {
@@ -36,6 +37,7 @@
 
 /*Informations concernant la statistique sélectionnée*/
 
+
 #stats_Statistiques_infos
 {
 	position: fixed;
@@ -49,14 +51,14 @@
 	overflow: auto;
 }
 
-#stats_Statistiques_infos_stat_nom
+#stats_Statistiques_infos_stat_nom /*nom de la la statistique sélectionnée*/
 {
 	font-size: 22;
 	font-weight: bold;
 	text-decoration: underline;
 }
 
-#stats_Statistiques_infos_stat_infos
+#stats_Statistiques_infos_stat_infos /*informations concernant la statistique sélectionnée*/
 {
 	font-size: 20;
 }
@@ -64,7 +66,8 @@
 
 
 
-/*Carte d'autocorrélation spatiale*/
+/*Carte d'autocorrélation spatiale de la statistique sélectionnée*/
+
 
 #stats_Statistiques_section
 {
@@ -86,7 +89,24 @@
 	margin-bottom: 5;
 }
 
-.stats_Statistiques_section_attribut /*label des attributs*/
+#stats_Statistiques_section_mapid /*carte affichée*/
+{
+	height: 410;
+	width: 540;
+	border: 1px solid black;
+	z-index: 0;
+}
+
+#stats_Statistiques_section_carte_refresh /*bouton d'actualisation de la carte avec les nouveaux paramètres (ville, type, indice)*/
+{
+	position: fixed;
+	top: 227;
+	left: 1535;
+	height: 25;
+}
+
+
+.stats_Statistiques_section_attribut /*labels des attributs de la carte*/
 {
 	font-size: 20;
 	font-weight: bold;
@@ -107,7 +127,6 @@
 	margin-right: 25;
 	margin-bottom: 10;
 }
-
 
 .stats_Statistiques_section_type_input /*choix du type de la carter*/
 {
@@ -132,7 +151,7 @@
 	padding-left: 0;
 }
 
-.stats_Statistiques_section_indice_input /*choix de l'indice d'autocorrélation spatiale de la carte*/
+.stats_Statistiques_section_indice_input /*radiobuttons du choix de l'indice d'autocorrélation spatiale de la carte*/
 {
 	margin-left: 10;
 }
@@ -143,26 +162,10 @@
 }
 
 
-#stats_Statistiques_section_carte_refresh /*bouton d'actualisation de la carte*/
-{
-	position: fixed;
-	top: 227;
-	left: 1535;
-	height: 25;
-}
-
-#stats_Statistiques_section_mapid /*carte affichée*/
-{
-	height: 410;
-	width: 540;
-	border: 1px solid black;
-	z-index: 0;
-}
-
-
 
 
 /*Légende de la carte*/
+
 
 #stats_Statistiques_legende
 {
@@ -188,187 +191,202 @@
 }
 
 
-.stats_Statistiques_legende_ligne /*ligne comprenant couleur ou valeurs associées à cette couleur*/
-{
-	padding:5;
-	margin-bottom: -10;
-}
+/*Si la carte affiche les indices de chaque carré/secteur*/
 
-.stats_Statistiques_legende_valeur /*valeur limite d'un intervalle de couleur*/
-{
-	font-size: 16;
-	margin-left: 45;
-}
+	.stats_Statistiques_legende_ligne /*ligne comprenant couleur ou valeurs associées à cette couleur*/
+	{
+		padding:5;
+		margin-bottom: -10;
+	}
 
-.stats_Statistiques_legende_couleur /*carré de couleur*/
-{
-	width: 20;
-	height: 15;
-	margin-left: 10;
-	border: 1px solid black;
-}
+	.stats_Statistiques_legende_valeur /*valeur limite d'un intervalle de couleur*/
+	{
+		font-size: 16;
+		margin-left: 45;
+	}
 
-
-.stats_Statistiques_legende_cluster /*lignes associant les couleurs aux clusters*/
-{
-	margin-top: 20;
-	display: flex;
-    flex-direction: row;
-}
-
-.stats_Statistiques_legende_cluster_couleur /*carrés de couleurs des lignes associant les couleurs aux clusters*/
-{
-	width: 20;
-	height: 15;
-	margin-left: 20;
-	border: 1px solid black;
-}
-
-.stats_Statistiques_legende_cluster_valeur /*textes des lignes associant les couleurs aux clusters*/
-{
-	font-size: 16;
-	margin-left: 10;
-	margin-top: -2;
-	height: 15;
-}
+	.stats_Statistiques_legende_couleur /*carré de couleur*/
+	{
+		width: 20;
+		height: 15;
+		margin-left: 10;
+		border: 1px solid black;
+	}
 
 
-#stats_Statistiques_legende_nuls /*ligne associant la couleur grise aux valeur non significatives*/
-{
-	margin-top: 30;
-	display: flex;
-    flex-direction: row;
-}
+/*Si la carte affiche les clusters auquels appartiennent chaque carré/secteur*/
 
-#stats_Statistiques_legende_nuls_couleur /*carré de couleur de la ligne associant la couleur grise aux valeur non significatives*/
-{
-	margin-left: 0;
-}
+	.stats_Statistiques_legende_cluster /*lignes associant les couleurs aux clusters*/
+	{
+		margin-top: 20;
+		display: flex;
+		flex-direction: row;
+	}
 
-#stats_Statistiques_legende_nuls_valeur /*texte de la ligne associant la couleur grise aux valeur non significatives*/
-{
-	font-size: 16;
-	margin-left: 7;
-	margin-top: -2;
-	height: 15;
-}
+	.stats_Statistiques_legende_cluster_couleur /*carrés de couleurs des lignes associant les couleurs aux clusters*/
+	{
+		width: 20;
+		height: 15;
+		margin-left: 20;
+		border: 1px solid black;
+	}
 
-
-#stats_Statistiques_legende_notSignificant /*ligne associant la couleur grise aux valeur non significatives*/
-{
-	margin-top: 20;
-	display: flex;
-    flex-direction: row;
-}
-
-#stats_Statistiques_legende_notSignificant_couleur /*carré de couleur de la ligne associant la couleur grise aux valeur non significatives*/
-{
-	margin-left: 0;
-}
-
-#stats_Statistiques_legende_notSignificant_valeur /*texte de la ligne associant la couleur grise aux valeur non significatives*/
-{
-	font-size: 12;
-	margin-left: 5;
-	height: 15;
-}
+	.stats_Statistiques_legende_cluster_valeur /*textes des lignes associant les couleurs aux clusters*/
+	{
+		font-size: 16;
+		margin-left: 10;
+		margin-top: -2;
+		height: 15;
+	}
 
 
-#stats_Statistiques_legende_noData /*ligne associant la couleur blanche aux secteurs sans indices (manque de valeurs)*/
-{
-	margin-top: 20;
-	display: flex;
-    flex-direction: row;
-}
+/*Si la carte contient des indices "nuls" (valeurs strictement égales dans une zone)*/
 
-#stats_Statistiques_legende_noData_couleur /*carré de couleur de la ligne associant la couleur blanche aux secteurs sans indices (manque de valeurs)*/
-{
-	margin-left: 0;
-}
+	#stats_Statistiques_legende_nuls /*ligne associant la couleur grise aux valeurs nulles*/
+	{
+		margin-top: 30;
+		margin-bottom: -10;
+		display: flex;
+		flex-direction: row;
+	}
 
-#stats_Statistiques_legende_noData_valeur /*texte de la ligne associant la couleur blanche aux secteurs sans indices (manque de valeurs)*/
-{
-	font-size: 16;
-	margin-left: 7;
-	margin-top: -2;
-	height: 15;
-}
+	#stats_Statistiques_legende_nuls_couleur /*carré de couleur de la ligne associant la couleur grise aux valeurs nulles*/
+	{
+		margin-left: 0;
+	}
 
-
-#stats_Statistiques_legende_types /*types d'éléments renvoyés par la carte (valeurs des indices de Moran des seceteurs ou clusters auquels ils appartiennent) pour les indices de Moran des secteurs*/
-{
-	margin-top: -10;
-	margin-bottom: 20;
-	margin-left: -5;
-	margin-right: 0;
-	padding: 0;
-	display: flex;
-    flex-direction: row;
-}
-
-.stats_Statistiques_legende_type /*bouton pour un type d'éléments renvoyés par la carte pour les indices de Moran des secteurs*/
-{
-	margin-left: 5;
-	padding: 0;
-	width : 50;
-	height: 20;
-	font-size: 11;
-	font-weight: bold;
-	color:black;
-	text-align:center;
-	border: 2px solid black;
-}
-
-#stats_Statistiques_legende_type_selec /*bouton pour le type sélectionné d'éléments renvoyés par la carte pour les indices de Moran des secteurs*/
-{
-	background-color: white;
-}
-
-#stats_Statistiques_legende_type_non_selec /*bouton pour le type non sélectionné d'éléments renvoyés par la carte pour les indices de Moran des secteurs*/
-{
-	background-color: grey;
-}
-
-#stats_Statistiques_legende_type_non_selec:hover /*changement de l'aspect de la souris et du bouton au survol du bouton pour le type non sélectionné*/
-{
-	cursor: pointer;
-	color: red;
-	background-color: blue;
-}
+	#stats_Statistiques_legende_nuls_valeur /*texte de la ligne associant la couleur grise aux valeurs nulles*/
+	{
+		font-size: 16;
+		margin-left: 7;
+		margin-top: -2;
+		height: 15;
+	}
 
 
-#stats_Statistiques_legende_infos /*informations sur l'utilisation de l'indice d'autocorrélation spatiale*/
-{
-	position: fixed;
-	top: 733;
-	left: 1194;
-	max-height: 210;
-	width: 640;
-	padding-left: 10;
-	padding-right: 10;
-	border: 1px solid black;
-	background-color: white;
-	overflow: auto;
-}
+/*Si la carte contient des indices non significatifs*/
 
-#stats_Statistiques_legende_formule /*formule de calcul de l'indice d'autocorrélation spatiale*/
-{
-	position: fixed;
-	top: 205;
-	left: 560;
-	width: 520;
-	max-height: 720;
-	padding: 10;
-	padding-left: 20;
-	padding-right: 20;
-	background-color: white;
-	border: 5px solid black;
-}
+	#stats_Statistiques_legende_notSignificant /*ligne associant la couleur grise aux valeurs non significatives*/
+	{
+		margin-top: 30;
+		display: flex;
+		flex-direction: row;
+	}
 
-#stats_Statistiques_legende_infos_button /*bouton pour afficher/supprimer les informations sur l'indice de Moran local*/
-{
-	position: fixed;
-	top: 690;
-	left: 1810;
-	height: 30;
-}
+	#stats_Statistiques_legende_notSignificant_couleur /*carré de couleur de la ligne associant la couleur grise aux valeurs non significatives*/
+	{
+		margin-left: 0;
+	}
+
+	#stats_Statistiques_legende_notSignificant_valeur /*texte de la ligne associant la couleur grise aux valeurs non significatives*/
+	{
+		font-size: 12;
+		margin-left: 5;
+		height: 15;
+	}
+
+
+/*Si la carte contient des secteurs sans indice (manque de données dans le secteur)*/
+
+	#stats_Statistiques_legende_noData /*ligne associant la couleur blanche aux secteurs sans indice*/
+	{
+		margin-top: 20;
+		display: flex;
+		flex-direction: row;
+	}
+
+	#stats_Statistiques_legende_noData_couleur /*carré de couleur de la ligne associant la couleur blanche aux secteurs sans indice*/
+	{
+		margin-left: 0;
+	}
+
+	#stats_Statistiques_legende_noData_valeur /*texte de la ligne associant la couleur blanche aux secteurs sans indice*/
+	{
+		font-size: 16;
+		margin-left: 7;
+		margin-top: -2;
+		height: 15;
+	}
+
+
+/*Si la carte affiche les indices de Moran des secteurs*/
+
+	#stats_Statistiques_legende_types /*types d'éléments renvoyés par la carte (valeurs des indices de Moran des secteurs ou clusters auquels ils appartiennent)*/
+	{
+		margin-top: -10;
+		margin-bottom: 20;
+		margin-left: -5;
+		margin-right: 0;
+		padding: 0;
+		display: flex;
+		flex-direction: row;
+	}
+
+	.stats_Statistiques_legende_type /*boutons pour les 2 types d'éléments pouvant être renvoyés par la carte*/
+	{
+		margin-left: 5;
+		padding: 0;
+		width : 50;
+		height: 20;
+		font-size: 11;
+		font-weight: bold;
+		color:black;
+		text-align:center;
+		border: 2px solid black;
+	}
+
+	#stats_Statistiques_legende_type_selec /*bouton pour le type sélectionné d'éléments renvoyés par la carte*/
+	{
+		background-color: white;
+	}
+
+	#stats_Statistiques_legende_type_non_selec /*bouton pour le type non sélectionné d'éléments renvoyés par la carte*/
+	{
+		background-color: grey;
+	}
+
+	#stats_Statistiques_legende_type_non_selec:hover /*changement de l'aspect de la souris et du bouton au survol du bouton pour le type non sélectionné*/
+	{
+		cursor: pointer;
+		color: red;
+		background-color: blue;
+	}
+
+
+/*Informations concernant l'indice d'autocorrélation spatiale utilisé*/
+
+	#stats_Statistiques_legende_infos_button /*bouton pour afficher/supprimer les informations sur l'indice utilisé*/
+	{
+		position: fixed;
+		top: 690;
+		left: 1810;
+		height: 30;
+	}
+
+	#stats_Statistiques_legende_formule /*formule de calcul de l'indice utilisé*/
+	{
+		position: fixed;
+		top: 205;
+		left: 560;
+		width: 520;
+		max-height: 720;
+		padding: 10;
+		padding-left: 20;
+		padding-right: 20;
+		background-color: white;
+		border: 5px solid black;
+	}
+
+	#stats_Statistiques_legende_infos /*informations sur l'utilisation de l'indice utilisé*/
+	{
+		position: fixed;
+		top: 733;
+		left: 1194;
+		max-height: 210;
+		width: 640;
+		padding-left: 10;
+		padding-right: 10;
+		border: 1px solid black;
+		background-color: white;
+		overflow: auto;
+	}
